Fixed text alignment issues and started adding height to images.

--- a/style.css
+++ b/style.css
@@ -78,16 +78,16 @@ header {
   margin-right: 30px;
 }
 
-.headline {
+.image.headline.mother {
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-main.png);
-
+  height: 300px;
 }
 
-.earth {
+.image.headline.earth {
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-2.png);
 }
 
-.research {
+.image.headline.research {
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-3.png);
 }
 
@@ -95,16 +95,24 @@ header {
   width: 300px;
 }
 
-.cats {
+.image.headline.cats {
   background-image: url(https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-story-1.png);
 }
 
-.image .tag-line {
+.headline-text {
   display: flex;
+  justify-content: center;
+  text-align: center;
   font-family: Georgia;
   font-weight: bold;
   font-size: 30px;
   color: white;
+}
+
+#main-headline {
+  text-align: left;
+  font-size: 40px;
+
 }
 
 .column.small {
@@ -123,11 +131,11 @@ header {
 }
 
 /*Not sure about this*/
-.main, .column, .large, .medium, .small, .Orca, .Burger, .news-bites, .tag-line {
+.main, .column, .large, .medium, .small, .Orca, .Burger, .news-bites, .headline {
   border: 1px solid black;
 }
 
 
-p.tag-line {
+p.headline-text {
   margin: 0px;
 }
